--- a/index.html
+++ b/index.html
@@ -1,4 +1,6 @@
-<!DOCTYPE html><html lang=en><head><meta charset=utf-8><meta http-equiv=X-UA-Compatible content="IE=edge"><link rel=icon href=/favicon.ico><title>Yiu's Villa Supplier</title><meta name=robots content="index, follow"><meta http-equiv=Content-Type content="text/html; charset=utf-8"><meta name=viewport content="width=device-width,initial-scale=1,shrink-to-fit=no"><meta property=og:title content="Yiu's Villa | China Supplier"><meta property=og:image content=/cover_.png><style>.page-loader {
+<!DOCTYPE html><html lang=en><head>
+        <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests" />
+        <meta charset=utf-8><meta http-equiv=X-UA-Compatible content="IE=edge"><link rel=icon href=/favicon.ico><title>Yiu's Villa Supplier</title><meta name=robots content="index, follow"><meta http-equiv=Content-Type content="text/html; charset=utf-8"><meta name=viewport content="width=device-width,initial-scale=1,shrink-to-fit=no"><meta property=og:title content="Yiu's Villa | China Supplier"><meta property=og:image content=/cover_.png><style>.page-loader {
         position: fixed;
         z-index: 9999999999999999;
         top: 0;
