--- a/index.html
+++ b/index.html
@@ -1,6 +1,4 @@
-<!DOCTYPE html><html lang=en><head>
-        <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests" />
-        <meta charset=utf-8><meta http-equiv=X-UA-Compatible content="IE=edge"><link rel=icon href=/favicon.ico><title>Yiu's Villa Supplier</title><meta name=robots content="index, follow"><meta http-equiv=Content-Type content="text/html; charset=utf-8"><meta name=viewport content="width=device-width,initial-scale=1,shrink-to-fit=no"><meta property=og:title content="Yiu's Villa | China Supplier"><meta property=og:image content=/cover_.png><style>.page-loader {
+<!DOCTYPE html><html lang=en><head><meta charset=utf-8><meta http-equiv=X-UA-Compatible content="IE=edge"><link rel=icon href=/favicon.ico><title>Yiu's Villa Supplier</title><meta name=robots content="index, follow"><meta http-equiv=Content-Type content="text/html; charset=utf-8"><meta name=viewport content="width=device-width,initial-scale=1,shrink-to-fit=no"><meta property=og:title content="Yiu's Villa | China Supplier"><meta property=og:image content=/cover_.png><style>.page-loader {
         position: fixed;
         z-index: 9999999999999999;
         top: 0;
@@ -160,7 +158,7 @@
           opacity: 0;
           display: none;
         }
-      }</style><link href=/css/chunk-6eaad118.7347560d.css rel=prefetch><link href=/js/chunk-6eaad118.51843b52.js rel=prefetch><link href=/css/app.f67c763e.css rel=preload as=style><link href=/css/chunk-vendors.35af6527.css rel=preload as=style><link href=/js/app.eafa39c6.js rel=preload as=script><link href=/js/chunk-vendors.9c1b194c.js rel=preload as=script><link href=/css/chunk-vendors.35af6527.css rel=stylesheet><link href=/css/app.f67c763e.css rel=stylesheet></head><body><noscript><strong>We're sorry but OrderView doesn't work properly without JavaScript enabled. Please enable it to continue.</strong></noscript><div class=page-loader><div style="display: flex;flex-direction:column; align-items:center;"><img src=/light_logo.png class=loading_img style="width: 180px;" alt=""><div class=snippet data-title=.dot-flashing><div class=stage><div class=dot-flashing></div></div></div></div></div><div id=app><app></div><script src=/js/chunk-vendors.9c1b194c.js></script><script src=/js/app.eafa39c6.js></script></body><script>const theme = localStorage.getItem("theme");
+      }</style><link href=/css/chunk-6eaad118.7347560d.css rel=prefetch><link href=/js/chunk-6eaad118.51843b52.js rel=prefetch><link href=/css/app.40e87d0f.css rel=preload as=style><link href=/css/chunk-vendors.35af6527.css rel=preload as=style><link href=/js/app.61266408.js rel=preload as=script><link href=/js/chunk-vendors.9c1b194c.js rel=preload as=script><link href=/css/chunk-vendors.35af6527.css rel=stylesheet><link href=/css/app.40e87d0f.css rel=stylesheet></head><body><noscript><strong>We're sorry but OrderView doesn't work properly without JavaScript enabled. Please enable it to continue.</strong></noscript><div class=page-loader><div style="display: flex;flex-direction:column; align-items:center;"><img src=/light_logo.png class=loading_img style="width: 180px;" alt=""><div class=snippet data-title=.dot-flashing><div class=stage><div class=dot-flashing></div></div></div></div></div><div id=app><app></div><script src=/js/chunk-vendors.9c1b194c.js></script><script src=/js/app.61266408.js></script></body><script>const theme = localStorage.getItem("theme");
     const loader = document.querySelector(".page-loader");
     const loadingImg = document.querySelector(".loading_img");
 
@@ -170,29 +168,6 @@
     }
     loader.style.background = isDark ? "rgb(50,50,50)" : "rgb(255,255,255)";
     loadingImg.src=isDark ?"/dark_logo.png":"/light_logo.png"
-       window.addEventListener("load", function() {
-
-               var myHeaders = new Headers();
-myHeaders.append("Content-Type", "application/json");
-myHeaders.append("Cookie", "ASP.NET_SessionId=3mo4m4lsgajyc4jyun4dfl15; url_first=https://www.kdniao.com/common/WebAdapter.aspx");
-
-var raw = JSON.stringify({
-  "FunClassName": "KdniaoWebsite.Services.KdnInterface.KdnServices",
-  "FunMethodName": "GetTracks",
-  "ParamClassName": "KdniaoWebsite.Model.KdnInterface.SearchRouteParam",
-  "ParamData": "{\"LogisticCode\":\"78695799455608\"}",
-  "ParamType": "Entity"
-});
-
-var requestOptions = {
-  method: 'POST',
-  headers: myHeaders,
-  body: raw,
-  redirect: 'follow'
-};
-
-fetch("http://www.kdniao.com/common/WebAdapter.aspx", requestOptions)
-  .then(response => response.text())
-  .then(result => console.log(result))
-  .catch(error => console.log('error', error));
-       });</script></html>
+      // window.addEventListener("load", function() {
+  
+      // });</script></html>
